--- a/ouroboros-network-framework/ouroboros-network-framework.cabal
+++ b/ouroboros-network-framework/ouroboros-network-framework.cabal
@@ -44,6 +44,7 @@ library
                        Ouroboros.Network.ConnectionManager.Types
                        Ouroboros.Network.ConnectionManager.Core
                        Ouroboros.Network.ConnectionManager.ConnectionHandler
+                       Ouroboros.Network.ConnectionManager.Server
                        Ouroboros.Network.Server.ConnectionTable
                        Ouroboros.Network.Server.Socket
                        Ouroboros.Network.Server.RateLimiting
@@ -109,6 +110,7 @@ test-suite ouroboros-network-framework-tests
                        Network.TypedProtocol.ReqResp.Codec.CBOR
                        Test.Network.TypedProtocol.PingPong.Codec
                        Test.Network.TypedProtocol.ReqResp.Codec
+                       Test.Ouroboros.Network.ConnectionManager.Server
                        Test.Ouroboros.Network.Driver
                        Test.Ouroboros.Network.Orphans
                        Test.Ouroboros.Network.Socket
@@ -135,6 +137,7 @@ test-suite ouroboros-network-framework-tests
                      , dns
                      , iproute
 
+                     , cardano-prelude
                      , io-sim
                      , QuickCheck
                      , tasty
