--- a/ouroboros-network/ouroboros-network.cabal
+++ b/ouroboros-network/ouroboros-network.cabal
@@ -255,6 +255,7 @@ test-suite test-network
                        Test.ChainFragment
                        Test.Ouroboros.Network.BlockFetch
                        Test.Ouroboros.Network.MockNode
+                       Test.Ouroboros.Network.TipSample.TipFragment
                        Test.Mux
                        Test.Pipe
                        Test.Socket
