--- a/ouroboros-network/ouroboros-network.cabal
+++ b/ouroboros-network/ouroboros-network.cabal
@@ -256,6 +256,7 @@ test-suite test-network
                        Test.Ouroboros.Network.BlockFetch
                        Test.Ouroboros.Network.MockNode
                        Test.Ouroboros.Network.TipSample.TipFragment
+                       Test.Ouroboros.Network.TipSample.TipRegistry
                        Test.Mux
                        Test.Pipe
                        Test.Socket
